kubernetes/mediaplayback/kptv-fast/kptv-fast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kptv-fast
  namespace: mediaplayback
  labels:
    app.kubernetes.io/name: kptv-fast
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kptv-fast
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kptv-fast
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kptv-fast
          image: ghcr.io/kpirnie/kptv-fast:latest
          imagePullPolicy: Always
          stdin: false
          tty: false
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 3000
            runAsGroup: 3000
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          startupProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
            successThreshold: 1
          
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          
          livenessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
