kubernetes/mediaplayback/kptv-fast/kptv-fast-network.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kptv-fast
  namespace: mediaplayback
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`kptv.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: kptv-fast
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kptv-fast
  namespace: mediaplayback
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kptv-fast
